--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <style>
-      html {
-        padding: 0;
-        margin: 0;
-      }
-      body {
-        padding: 0;
-        margin: 0;
-      }
-    </style>
+    <style></style>
   </head>
   <body>
     <div id="app"></div>
