added bettermeta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wandugu's Portfolio</title>
+    <meta
+      name="description"
+      content="Welcome to Alex Wandugu's personal website hosted on GitHub Pages. Learn more about my projects, skills, and portfolio."
+    />
+    <meta
+      name="keywords"
+      content="Alex Wandugu, GitHub Pages, Portfolio, Personal Website, Projects"
+    />
+    <meta name="author" content="Alex Wandugu" />
+    <meta property="og:title" content="Alex Wandugu - Personal Website" />
+    <meta
+      property="og:description"
+      content="Explore Alex Wandugu's personal website showcasing projects and expertise."
+    />
+    <meta property="og:url" content="https://alexwandugu.github.io" />
+    <meta property="og:type" content="website" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>Alex Wandugu - Personal Website</title>
     <style>
       html {
         padding: 0;
