--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     />
     <meta property="og:url" content="https://alexwandugu.github.io" />
     <meta property="og:type" content="website" />
-    <link rel="icon" href="/favicon.ico" />
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <title>Alex Wandugu - Personal Website</title>
     <style>
       html {
