html tag updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <title>Alex Wandugu - Personal Website</title>
+    <title>Alex Wandugu - Portfolio</title>
     <style>
       html {
         padding: 0;
